--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "start": "node --experimental-json-modules index.js"
+        "start": "node --experimental-json-modules index.js",
+        "test": "node --experimental-json-modules test.js"
     },
     "dependencies": {
         "@ethereumjs/common": "^4.0.0",
